@@ -13,6 +13,8 @@ Version 0.3v
  - Talk (multiple topics), written by QB and LD.
 * Fixed a bug in the sermon spell.
 * Restructured the save format a bit to account for stretch/capacity on some NPCs. This may have some side effects, such as Terry's body resetting the first time you load an old save.
+* New Miranda scene:
+ - Dommy Miranda, have her ride you.
 
 --------------------------------------------
              PREVIOUS VERSIONS
